1、新增ObservableCollectionEx扩展。2、修改第一次播放时缓存路径错误的问题

--- a/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
@@ -36,7 +36,7 @@
             </StackLayout>
 
         </StackLayout>
-        <Label Text="什么也没找到"
+        <Label Text="播放列表居然是空的...."
                HorizontalOptions="Center"
                VerticalOptions="Start"
                IsVisible="{Binding IsPlaylistEmpty}"/>
