--- a/src/MusicPlayerOnline.Maui/Pages/CacheCleanPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/CacheCleanPage.xaml
@@ -4,33 +4,49 @@
              x:Class="MusicPlayerOnline.Maui.CacheCleanPage"
              Title="缓存清理">
 
-    <StackLayout Margin="16">
-        <Label Text="缓存清理"
-                   Margin="0,0,0,10"/>
+    <ContentPage.Resources>
+        <Style x:Key="IsEnabledClear" TargetType="Button">
+            <Setter Property="IsEnabled" Value="True"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding SelectedSize}" Value="0" TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </ContentPage.Resources>
 
-        <Label Text="谨慎清理，有些歌曲清理后就再也找不回来咯"
-                   Margin="0,0,0,10"/>
-        <ListView ItemsSource="{Binding Caches}" SelectionMode="None">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <ViewCell.ContextActions>
-                        </ViewCell.ContextActions>
-                        <ViewCell.View>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="{Binding Name}"
-                                       LineBreakMode="NoWrap"/>
-                                <CheckBox HorizontalOptions="EndAndExpand" 
-                                          IsChecked="{Binding IsChecked}"
-                                          CheckedChanged="CheckBox_CheckedChanged" />
-                            </StackLayout>
-                        </ViewCell.View>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <StackLayout Orientation="Horizontal">
-            <StackLayout>
+    <StackLayout Margin="16">
+        <StackLayout HeightRequest="40"
+                     Orientation="Horizontal"
+                     VerticalOptions="Start">
+            <Label Text="缓存清理"
+                   HorizontalOptions="Start"
+                   VerticalOptions="Start"/>
+        </StackLayout>
+
+        <ScrollView VerticalOptions="FillAndExpand">
+            <CollectionView ItemsSource="{Binding Caches}"
+                        EmptyView="没有缓存的歌曲，快去听歌吧"
+                        SelectionMode="None">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="{Binding Name}"
+                                   LineBreakMode="NoWrap"/>
+                            <CheckBox HorizontalOptions="EndAndExpand"
+                                      IsChecked="{Binding IsChecked}"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </ScrollView>
+        <Label Text="谨慎清理，小心有些歌曲已经是VIP的咯"
+               VerticalOptions="End"
+               Margin="0,10,0,5"/>
+
+        <StackLayout Orientation="Horizontal"
+                     VerticalOptions="End">
+            <StackLayout Margin="0,0,20,0">
                 <StackLayout Orientation="Horizontal">
                     <Label Text="总大小：" />
                     <Label Text="{Binding AllSizeString,StringFormat='{0}MB'}" />
@@ -43,6 +59,7 @@
             <Button Text="全选"
                     Command="{Binding SelectAllCommand}"/>
             <Button Text="删除"
+                    Style="{DynamicResource IsEnabledClear}"
                     Command="{Binding ClearCommand}"/>
         </StackLayout>
     </StackLayout>
