--- a/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="MusicPlayerOnline.Maui.LogPage"
              Title="日志">
+
+    <ContentPage.Resources>
+
+        <Style x:Key="IsButtonEnabled" TargetType="Button">
+            <Setter Property="IsEnabled" Value="True"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Logs.Count}" Value="0" TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsBusy}" Value="True" TargetType="Button">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </ContentPage.Resources>
+
     <StackLayout Margin="16">
-        <Label Text="日志"
-               VerticalOptions="Start"
-               Margin="0,0,0,10"/>
+        <StackLayout HeightRequest="40"
+                         Orientation="Horizontal"
+                         VerticalOptions="Start">
+            <Label Text="日志"
+                       HorizontalOptions="Start"
+                       VerticalOptions="Start"/>
+            <Label Text="{Binding Logs.Count}"
+                      BackgroundColor="Red"/>
+            <Label Text="{Binding IsBusy}"
+                      BackgroundColor="Red"/>
+            <ActivityIndicator IsRunning="{Binding IsBusy}"
+                                   HeightRequest="16"
+                                   WidthRequest="16"
+                                   HorizontalOptions="Start"
+                                   VerticalOptions="Start"
+                                   Margin="20,0,20,0"/>
+        </StackLayout>
 
         <ScrollView VerticalOptions="FillAndExpand"
                     Margin="0,0,0,10">
             <CollectionView ItemsSource="{Binding Logs}"
+                            IsVisible="{Binding IsNotBusy}"
+                            EmptyView="啥日志也没有，列表是空的"
                             SelectionMode="None"  >
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
@@ -26,9 +59,11 @@
         <Button Text="上传到服务器"
                 Margin="0,0,0,5"
                 VerticalOptions="End"
+                Style="{DynamicResource IsButtonEnabled}"
                 Command="{Binding UpdateLogsCommand}"/>
         <Button Text="删除本地日志"
                 VerticalOptions="End"
+                Style="{DynamicResource IsButtonEnabled}"
                 Command="{Binding ClearLogsCommand}"/>
 
     </StackLayout>
