--- a/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
@@ -4,20 +4,22 @@
              x:Class="MusicPlayerOnline.Maui.RegisterPage"
              Title="注册">
 
-    <ContentPage.Resources>
-        <Style x:Key="RegisterButton" TargetType="Button">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding IsShowRegister}" Value="true" TargetType="Button">
-                    <Setter Property="IsVisible" Value="true"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding IsShowRegister}" Value="false" TargetType="Button">
-                    <Setter Property="IsVisible" Value="false"/>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-    </ContentPage.Resources>
-
     <StackLayout Margin="16">
+
+        <StackLayout HeightRequest="40"
+                     Orientation="Horizontal"
+                     VerticalOptions="Start">
+            <Label Text="新用户注册"
+                   VerticalOptions="Start"/>
+
+            <ActivityIndicator IsRunning="{Binding IsBusy}"
+                               HeightRequest="16"
+                               WidthRequest="16"
+                               HorizontalOptions="Start"
+                               VerticalOptions="Start"
+                               Margin="20,0,20,0"/>
+        </StackLayout>
+
         <Entry Text="{Binding Username}"
                        Placeholder="请输入用户名"
                        Margin="0,10,0,10"/>
@@ -39,18 +41,21 @@
             <Image Source="{Binding MyImage}"
                    WidthRequest="48"
                    Margin="0,0,10,0"/>
-            <Button Text="上传"
+            <Button Text="选择"
+                    IsEnabled="{Binding IsNotBusy}"
                     Command="{Binding ChoseImageCommand}"/>
         </HorizontalStackLayout>
 
-        <HorizontalStackLayout Margin="0,10,0,20">
-            <Button Text="注册"       
-                    Margin="0,0,10,0"
-                    Style="{DynamicResource RegisterButton}"
-                    Command="{Binding RegisterCommand}"/>
-            <Button Text="返回"           
-                    Command="{Binding GoBackCommand}"/>
-        </HorizontalStackLayout>
-        <Label Text="{Binding ApiMessage}"></Label>
+        <Label Text="{Binding ApiMessage}"
+               Margin="0,10,0,0"/>
+
+        <Button Text="注册"
+                Margin="0,20,0,0"
+                IsEnabled="{Binding IsNotBusy}"
+                Command="{Binding RegisterCommand}"/>
+        <Button Text="返回"
+                Margin="0,5,0,0"
+                IsEnabled="{Binding IsNotBusy}"
+                Command="{Binding GoBackCommand}"/>
     </StackLayout>
 </ContentPage>
