--- a/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
@@ -48,7 +48,7 @@
                                    Margin="20,0,20,0"/>
             </StackLayout>
 
-            <ScrollView>
+            <ScrollView VerticalOptions="FillAndExpand">
                 <StackLayout>
 
                     <!--用户模块-->
@@ -109,77 +109,43 @@
                         <!-- 常规设置 -->
                         <Label Text="常规" 
                                FontAttributes="Bold"/>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="启动时检查更新"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsAutoCheckUpdate}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="深色主题"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsDarkMode}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
+
+                        <controls:SwitchEx Text="启动时检查更新"
+                                           IsToggled="{Binding IsAutoCheckUpdate}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="深色主题"
+                                           IsToggled="{Binding IsDarkMode}">
+                        </controls:SwitchEx>
 
                         <!-- 搜索设置 -->
                         <Label Text="搜索" 
                                FontAttributes="Bold"/>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="网易云音乐"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsEnableNetEase}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="酷狗音乐"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsEnableKuGou}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="咪咕音乐"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsEnableMiGu}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="隐藏小于1分钟的歌曲"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsHideShortMusic}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
+                        <controls:SwitchEx Text="网易云音乐"
+                                           IsToggled="{Binding IsEnableNetEase}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="酷狗音乐"
+                                           IsToggled="{Binding IsEnableKuGou}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="咪咕音乐"
+                                           IsToggled="{Binding IsEnableMiGu}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="隐藏小于1分钟的歌曲"
+                                           IsToggled="{Binding IsHideShortMusic}">
+                        </controls:SwitchEx>
 
                         <!-- 播放设置 -->
                         <Label Text="播放" 
                                FontAttributes="Bold"/>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="仅在WIFI下播放未缓存的歌曲"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsWifiPlayOnly}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="播放失败时自动跳到下一首"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsAutoNextWhenFailed}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="播放我的歌单前清空播放列表"
-                                   HorizontalOptions="Start"
-                                   VerticalTextAlignment="Center"/>
-                            <Switch IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}"
-                                    HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
+
+                        <controls:SwitchEx Text="仅在WIFI下播放未缓存的歌曲"
+                                           IsToggled="{Binding IsWifiPlayOnly}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="播放失败时自动跳到下一首"
+                                           IsToggled="{Binding IsAutoNextWhenFailed}">
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="播放我的歌单前清空播放列表"
+                                           IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}">
+                        </controls:SwitchEx>
                     </StackLayout>
 
                     <!--其它模块-->
