--- a/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
@@ -4,8 +4,8 @@
              x:Class="MusicPlayerOnline.Maui.RegisterPage"
              Title="注册">
 
-    <StackLayout Margin="16"
-                 WidthRequest="400">
+    <Grid Margin="16"
+          ColumnDefinitions="{OnPlatform Default=*, UWP=400,MacCatalyst=400}">
         <StackLayout 
                      HeightRequest="40"
                      Orientation="Horizontal"
@@ -58,5 +58,5 @@
                 Margin="0,5,0,0"
                 IsEnabled="{Binding IsNotBusy}"
                 Command="{Binding GoBackCommand}"/>
-    </StackLayout>
+    </Grid>
 </ContentPage>
